[package]
name = "rust-http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
bs58 = "0.5"
base64 = "0.22"
spl-token = "3.5"
spl-associated-token-account = "1.1"

